css/style.css
/* COMMON */

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: "Roboto", sans-serif;
}

i {
    cursor: pointer;
}

.flex-alig-cen {
    display: flex;
    align-items: center;
}

.absolute-center {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.h-100 {
    height: 100%;
}


/* Text Rules */

h2 {
    font-size: 22px;
    font-weight: 400;
}


/* /Text Rules */

#root {
    justify-content: center;
    height: 100vh;
    background: linear-gradient(180deg, #009688 17%, #dbdbd3 0%);
}

#application {
    display: flex;
    height: 95%;
    width: 80%;
}

#left-section {
    width: 40%;
    background-color: white;
}

#right-section {
    width: 60%;
}


/* Left Section */


/* Main user bar */

#main-user-bar,
#chat-top-bar {
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 80px;
    padding: 2%;
    background-color: #eaeaea;
}

#info-main-user>img,
#info-chat-contact>img {
    height: 100%;
    margin: 0 5px 0 0;
    border-radius: 50%;
}

#info-main-user>span {
    font-weight: 500;
    font-size: 16px;
}

.option {
    text-align: right;
}

.option>i {
    margin: 0 10px;
    font-size: 26px;
    color: #b1b1b1;
}


/* Notification bar */

#notification-bar {
    height: 100px;
    background-color: #8edafc;
}

#bell-image {
    position: relative;
    width: 60px;
    height: 60px;
    margin: 0 15px;
    border-radius: 50%;
    background-color: white;
    padding: 10px;
}

#bell-image>i {
    font-size: 24px;
    color: #8edafc;
}

#activate-notify {
    font-size: 14px;
    color: #4f7485;
    cursor: pointer;
}


/* Search input */

#search-input {
    height: 50px;
    background-color: rgb(250, 250, 250);
    padding: 7px;
}

#input-bar {
    display: flex;
    height: 100%;
    border: 1px solid lightgrey;
}

#input-bar>i {
    width: 13%;
    padding: 5px;
    background-color: white;
    color: #b1b1b1;
    font-size: 22px;
    text-align: center;
}

#input-bar>input {
    width: 80%;
    border: none;
}


/* Contacts */

#contacts {
    height: calc(100% - 230px);
    overflow-y: scroll;
}

.box-preview {
    display: flex;
    height: 100px;
    padding: 0 20px;
    border-bottom: 1px solid lightgrey;
    cursor: pointer;
}

.active {
    background-color: #e9ebeb;
}

.box-preview-image>img {
    padding: 12px;
    border-radius: 50%;
}

.box-preview-text {
    width: 55%;
    padding: 12px;
}

.preview-text {
    font-size: 14px;
    color: #b6b9bb;
}

.box-preview-time {
    padding-top: 12px;
}

.date {
    font-size: 13px;
    color: #b6b9bb;
}


/* Right Section */


/* Main Chat */

#chat-top-bar {
    border-left: 1px solid lightgrey;
}

#main-chat {
    height: calc(100% - 160px);
    padding: 8%;
    overflow-y: scroll;
    background-image: url(../img/mine.jpg);
}

.message {
    position: relative;
    margin: 1% 0;
    width: 45%;
    padding: 16px 20px 22px;
    border-radius: 10px;
}

.message-send {
    float: right;
    clear: both;
    background-color: #d5f8ba;
}

.message-received {
    float: left;
    clear: both;
    background-color: white;
}

.message-time {
    position: absolute;
    bottom: 0;
    right: 3%;
    font-size: 12px;
    color: #6b7376;
}

#main-chat::after {
    content: "";
    clear: both;
    display: table;
}

#message-input {
    display: flex;
    height: 80px;
    background-color: #f3eeea;
    border-left: 1px solid lightgrey;
}

#emoticon,
#microphone {
    position: relative;
    width: 10%;
    font-size: 30px;
    color: #6b7376;
}

#input-message {
    width: 80%;
    height: 70%;
    align-self: center;
    padding-left: 15px;
    border: none;
    border-radius: 8px;
    font-size: 18px;
}

input:focus-visible {
    outline: none;
}


/* HOVER */

.option>i:hover {
    color: cadetblue;
}

#activate-notify:hover {
    text-decoration: underline;
}

.box-preview:hover {
    background-color: #e9ebeb;
}

#message-input i:hover {
    color: black;
}

